2004-08-28  Alan Modra  <amodra@bigpond.net.au>

	* nm.c (show_synthetic): New var.
	(long_options): Add "synthetic".
	(usage): Here too.
	(display_rel_file): Handle show_synthetic.

2004-08-28  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c (dump_bfd): Pass both symbol tables to
	bfd_get_synthetic_symtab.

2004-08-17  Jakub Jelinek  <jakub@redhat.com>

	* objdump.c (dump_bfd): For relocatable objects, pass syms instead
	of dynsyms to bfd_get_synthetic_symtab.

2004-08-16  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c (debug_apply_rela_addends): New function, extracted from..
	(display_debug_info): ..here.
	(display_debug_frames): Call debug_apply_rela_addends.  Don't do
	DW_EH_PE_pcrel adjustment for ET_REL.

2004-08-06  Andreas Schwab  <schwab@suse.de>

	* readelf.c (dump_relocations): Fix typo when calculating
	sec_index.

2004-08-02  Jakub Bogusz  <qboosh@pld-linux.org>

	* dllwrap.c (deduce_name): Fix typos introduced when program_name
	was renamed to prog_name.

2004-07-29  Alexandre Oliva  <aoliva@redhat.com>

	* readelf.c (get_machine_flags <EM_SH>): Handle EF_SH2A and
	EF_SH2A_NOFPU.

2004-07-28  Alexandre Oliva  <aoliva@redhat.com>

	2003-07-08  Alexandre Oliva  <aoliva@redhat.com>
	* readelf.c (get_machine_flags <EM_SH)): Handle EF_SH4_NOFPU and
	EF_SH4A_NOFPU.
	2003-06-12  Alexandre Oliva  <aoliva@redhat.com>
	* readelf.c (get_machine_flags <EM_SH>): Print SH ISA name.

2004-07-21  H.J. Lu  <hongjiu.lu@intel.com>

	* objcopy.c (filter_symbols): Use bfd_coff_get_comdat_section
	to access comdat.
	* objdump.c (dump_section_header): Likewise.

2004-07-15  Aravinda PR  <aravindapr@rediffmail.com>

	* nlmconv.c (main): Pass map_file argument to link_inputs.
	(link_inputs): Use map_file argument if it is defined.

2004-07-13  Nick Clifton  <nickc@redhat.com>

	* dllwrap.c: Replace 'program_name' with 'prog_name' to avoid
	conflicts with exported global defined in bucomm.h.
	(deduce_name): Rename parameter 'program_name' to 'name' to avoid